name:                sprily-co-uk
version:             0.0.0.1
synopsis:            sprily.co.uk website
description:         A website
homepage:            https://github.com/sprily/sprily.co.uk
license:             MIT
license-file:        LICENSE
author:              Ian Murray
maintainer:          ian@sprily.co.uk
copyright:           2014 Sprily IT Ltd.
build-type:          Simple
cabal-version:       >=1.10

executable site
  main-is: site.hs
  build-depends: base >=4.6
               , hakyll >= 4.5.0 && < 4.6.0
               , containers
  default-language:    Haskell2010
